vb/amzi.bas


Declare Function lsGetTermType Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long
Declare Function lsGetTerm Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal BType As Integer, Ptr As Any) As Long

Declare Function lsGetFA Lib "amzi.dll" Alias "lsGetFAA" (ByVal EngID As Long, ByVal Term As Long, ByVal Functor As String, Arity As Integer) As Long
Declare Function lsMakeFA Lib "amzi.dll" Alias "lsMakeFAA" (ByVal EngID As Long, TermPtr As Long, ByVal Functor As String, ByVal Arity As Integer) As Long
Declare Function lsGetArg Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal ArgNum As Long, ByVal BType As Integer, Ptr As Any) As Long
Declare Function lsGetArgType Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal ArgNum As Long) As Integer
Declare Function lsStrArgLen Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal ArgNum As Long) As Long
Declare Function lsUnify Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal Term As Long) As Long
Declare Function lsUnifyArg Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, ByVal ArgNum As Long, ByVal BType As Integer, Ptr As Any) As Long

Declare Function lsMakeList Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long) As Long
Declare Function lsPushList Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, ByVal Term As Long) As Long
Declare Function lsPopList Lib "amzi.dll" (ByVal EngID As Long, TermPtr As Long, ByVal BType As Integer, Ptr As Any) As Long
Declare Function lsGetHead Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long, ByVal BType As Integer, Ptr As Any) As Long
Declare Function lsGetTail Lib "amzi.dll" (ByVal EngID As Long, ByVal Term As Long) As Long

Declare Function lsGetVersion Lib "amzi.dll" Alias "lsGetVersionA" (ByVal EngID As Long, ByVal StrPtr As String) As Long

Declare Function lsGetParm Lib "amzi.dll" (ByVal EngID As Long, ByVal Param As Long, ByVal BType As Integer, Ptr As Any) As Long
Declare Function lsGetParmType Lib "amzi.dll" (ByVal EngID As Long, ByVal Param As Long) As Long
Declare Function lsStrParmLen Lib "amzi.dll" (ByVal EngID As Long, ByVal Param As Long) As Long
Declare Function lsUnifyParm Lib "amzi.dll" (ByVal EngID As Long, ByVal Param As Long, ByVal BType As Integer, Ptr As Any) As Long

Declare Function lsSetStream Lib "amzi.dll" (ByVal EngID As Long, ByVal Stream As Integer, ByVal Handle As Long) As Long
Declare Function lsGetStream Lib "amzi.dll" (ByVal EngID As Long, ByVal Stream As Integer) As Long

Declare Sub lsGetExceptMsg Lib "amzi.dll" Alias "lsGetExceptMsgA" (ByVal EngID As Long, ByVal StrPtr As String, ByVal StrLen As Long)
Declare Function lsGetExceptRC Lib "amzi.dll" (ByVal EngID As Long) As Long
Declare Sub lsGetExceptReadBuffer Lib "amzi.dll" Alias "lsGetExceptReadBufferA" (ByVal EngID As Long, ByVal StrPtr As String, StrLen As Long)
Declare Function lsErrRaise Lib "amzi.dll" Alias "lsErrRaiseA" (ByVal EngID As Long, ByVal StrPtr As String) As Long

#End If

Public Sub AssertaLS(ByVal Term As Long)
    Dim rc As Long

    rc = lsAsserta(EngineID, Term)
    If (rc <> 0) Then
        Call ErrorHandler("lsAsserta", rc)
    End If

End Sub

Public Sub AssertaStrLS(ByVal StrPtr As String)
    Dim rc As Long

    rc = lsAssertaStr(EngineID, StrPtr + Chr$(0))
    If (rc <> 0) Then
        Call ErrorHandler("lsAssertaStr", rc)
    End If

End Sub

Public Sub AssertzLS(ByVal Term As Long)
    Dim rc As Long

    rc = lsAssertz(EngineID, Term)
    If (rc <> 0) Then
        Call ErrorHandler("lsAssertz", rc)
    End If

End Sub

Public Sub AssertzStrLS(ByVal StrPtr As String)
    Dim rc As Long

    rc = lsAssertzStr(EngineID, StrPtr + Chr$(0))
    If (rc <> 0) Then
        Call ErrorHandler("lsAssertzStr", rc)
    End If

End Sub

Public Function CallLS(TermPtr As Long) As Boolean
    Dim tf As Long

    tf = lsCall(EngineID, TermPtr)
    Select Case tf
        Case 0
            CallLS = False
        Case 1
            CallLS = True
        Case Else
            Call ErrorHandler("lsCall", tf)
    End Select

End Function

Public Function CallStrLS(TermPtr As Long, ByVal StrPtr As String) As Boolean
    Dim tf As Long

    tf = lsCallStr(EngineID, TermPtr, StrPtr + Chr$(0))
    Select Case tf
        Case 0
            CallStrLS = False
        Case 1
            CallStrLS = True
        Case Else
            Call ErrorHandler("lsCallStr", tf)
    End Select

End Function

Public Sub ClearCallLS()
    Dim rc As Long

    rc = lsClearCall(EngineID)
    If (rc <> 0) Then
        Call ErrorHandler("lsClearCall", rc)
    End If

End Sub

Public Sub CloseLS()
    Dim rc As Long
    
    If EngineID <> 0 Then

        rc = lsClose(EngineID)
        If (rc <> 0) Then
            MsgBox "Error #" + str$(rc) + " calling lsClose"
        End If
    End If
    EngineID = 0

End Sub
Public Function GetExceptMsgLS() As String
    Dim tstr As String
    Dim l As Long

    tstr = Space$(MaxStrLen)
    l = MaxStrLen
    Call lsGetExceptMsg(EngineID, ByVal tstr, l)
    
    GetExceptMsgLS = StripStr(tstr)

End Function

Private Sub ErrorHandler(ByVal module As String, ByVal ErrCode As Long)
    Static errmsg As String
    Static l As Long
    Dim ans As Integer

    MaxStrLen = 32000
    errmsg = Space$(MaxStrLen)
    l = MaxStrLen
    Call lsGetExceptMsg(engineid, errmsg, l)
    errmsg = StripStr(errmsg)
        
    If ErrCode = -1 Then
        errmsg = "Amzi! engine has shutdown. Restart application to restart ARulesXL. (" & module & ")"
    End If
    
    Err.Raise Number:=vbObjectError + ErrCode, Source:="ARulesXL", Description:=errmsg
      
End Sub

Public Function GetExceptReadBufferLS() As String
    Dim StrPtr As String
    Dim l As Long
    
    StrPtr = Space$(MaxStrLen)
    l = MaxStrLen
    Call lsGetExceptReadBuffer(EngineID, ByVal StrPtr, l)
    
    GetExceptReadBufferLS = StripStr(StrPtr)

End Function

Public Function ExecLS(TermPtr As Long) As Boolean
    Dim tf As Long

    tf = lsExec(EngineID, TermPtr)
    Select Case tf
        Case 0
            ExecLS = False
        Case 1
            ExecLS = True
        Case Else
            Call ErrorHandler("lsExec", tf)
    End Select

End Function

Public Function ExecStrLS(TermPtr As Long, ByVal StrPtr) As Boolean
    Dim tf As Long

    tf = lsExecStr(EngineID, TermPtr, StrPtr + Chr$(0))
    Select Case tf
        Case 0
            ExecStrLS = False
        Case 1
            ExecStrLS = True
        Case Else
            Call ErrorHandler("lsExecStr", tf)
    End Select

End Function

Public Function ExecStrThLS(TermPtr As Long, ByVal StrPtr As String) As Boolean
    Dim tf As Long

    tf = lsExecStrTh(engineid, TermPtr, StrPtr + Chr$(0))
    Select Case tf
        Case 0
            ExecStrThLS = False
        Case 1
            ExecStrThLS = True
        Case Else
            Call ErrorHandler("lsExecStrTh", tf)
    End Select

End Function

Public Sub PutActionLS(ByVal StrPtr As String)
    Dim rc As Long

    rc = lsPutAction(engineid, StrPtr + Chr$(0))
    If (rc <> 0) Then
        Call ErrorHandler("lsPutAction", rc)
    End If

End Sub

Public Function GetActionStateLS() As Integer
    Dim rc As Long

    rc = lsGetActionState(engineid)
    ' rc is overloaded to return a 1 if it's safe to issue Prolog execs,
    ' or 0 if it's not
    ' 0 not ready
    ' 1 prolog trace running waiting for input
    ' 2 prolog trace done
    GetActionStateLS = rc
'    Select Case rc
'        Case 0
'            GetActionStateLS = False
'        Case 1
'            GetActionStateLS = True
'        Case Else
'            Call ErrorHandler("lsGetActionState", rc)
'    End Select

End Function

Public Sub GetArgLS(ByVal Term As Long, ByVal ArgNum As Long, ByVal BType As Integer, Ptr As Variant)
    Dim rc As Long, tstr As String
    Dim tlong As Long, tfloat As Single, tint As Integer, tdouble As Double
    Dim s As String
    
    Select Case BType
        Case bSTR, bATOM
            tstr = Space$(MaxStrLen)
            rc = lsGetArg(EngineID, Term, ArgNum, BType, ByVal tstr)
            Ptr = StripStr(tstr)
        Case bLONG, bADDR, bTERM
            rc = lsGetArg(EngineID, Term, ArgNum, BType, tlong)
            Ptr = tlong
        Case bINT, bSHORT
            rc = lsGetArg(EngineID, Term, ArgNum, BType, tint)
            Ptr = tint
        Case bFLOAT
            rc = lsGetArg(EngineID, Term, ArgNum, BType, tfloat)
            Ptr = tfloat
        Case bDOUBLE
            rc = lsGetArg(EngineID, Term, ArgNum, BType, tdouble)
            Ptr = tdouble
    End Select

    If (rc <> 0) Then
        Call ErrorHandler("lsGetArg", rc)
    End If
    
End Sub

Public Function GetArgTypeLS(ByVal Term As Long, ByVal ArgNum As Long) As Integer
    GetArgTypeLS = lsGetArgType(EngineID, Term, ArgNum)
End Function

Public Function GetArityLS(ByVal Term As Long) As Integer
    Dim rc As Long, tstr As String, tint As Integer
    
    tstr = Space$(MaxStrLen)
    rc = lsGetFA(EngineID, Term, ByVal tstr, tint)
    If (rc <> 0) Then
        Call ErrorHandler("lsGetFA", rc)
    End If

    GetArityLS = tint

End Function

Public Sub GetFALS(ByVal Term As Long, StrPtr As String, ArityPtr As Integer)
    Dim rc As Long
    
    StrPtr = Space$(MaxStrLen)
    rc = lsGetFA(EngineID, Term, ByVal StrPtr, ArityPtr)
    If (rc <> 0) Then
        Call ErrorHandler("lsGetFA", rc)
    End If

    StrPtr = StripStr(StrPtr)

End Sub

Public Function GetFloatArgLS(ByVal Term As Long, ByVal ArgNum As Long) As Double
    Dim rc As Long, tfloat As Double

    rc = lsGetArg(EngineID, Term, ArgNum, bDOUBLE, tfloat)
    If (rc <> 0) Then
        Call ErrorHandler("lsGetArg", rc)
    End If
    
    GetFloatArgLS = tfloat

End Function

Public Function GetFloatTermLS(ByVal Term As Long) As Double
    Dim rc As Long, tfloat As Double

    rc = lsGetTerm(EngineID, Term, bDOUBLE, tfloat)

    If (rc <> 0) Then
        Call ErrorHandler("lsGetTerm", rc)
    End If

    GetFloatTermLS = tfloat

End Function

Public Function GetFunctorLS(ByVal Term As Long) As String
    Dim rc As Long, tstr As String, tint As Integer
    
    tstr = Space$(MaxStrLen)
    rc = lsGetFA(EngineID, Term, ByVal tstr, tint)
    If (rc <> 0) Then
        Call ErrorHandler("lsGetFA", rc)
    End If

    GetFunctorLS = StripStr(tstr)

End Function

Public Function GetIntArgLS(ByVal Term As Long, ByVal ArgNum As Long) As Integer
    Dim rc As Long, tint As Integer

    rc = lsGetArg(EngineID, Term, ArgNum, bINT, tint)
    If (rc <> 0) Then
        Call ErrorHandler("lsGetArg", rc)
    End If
    
    GetIntArgLS = tint

End Function

Public Function GetIntTermLS(ByVal Term As Long) As Integer
    Dim rc As Long, tint As Integer

    rc = lsGetTerm(EngineID, Term, bINT, tint)
    If (rc <> 0) Then
        Call ErrorHandler("lsGetTerm", rc)
    End If

    GetIntTermLS = tint

End Function

Public Function GetLongArgLS(ByVal Term As Long, ByVal ArgNum As Long) As Long
    Dim rc As Long, tlong As Long

    rc = lsGetArg(EngineID, Term, ArgNum, bLONG, tlong)
    If (rc <> 0) Then
        Call ErrorHandler("lsGetArg", rc)
    End If
    
    GetLongArgLS = tlong

End Function

Public Function GetLongTermLS(ByVal Term As Long) As Long
    Dim rc As Long, tlong As Long

    rc = lsGetTerm(EngineID, Term, bLONG, tlong)
    If (rc <> 0) Then
        Call ErrorHandler("lsGetTerm", rc)
    End If

    GetLongTermLS = tlong

End Function

Public Function GetStrArgLS(ByVal Term As Long, ByVal ArgNum As Long) As String
    Dim rc As Long, tstr As String
    Dim Length As Long
